Add "AllArticles" mode to Reader Mode heuristics

This is a preliminary change to enable the desired mode in the back end.

BUG=736168

Review-Url: https://codereview.chromium.org/2961533002
Cr-Commit-Position: refs/heads/master@{#484987}

Former-commit-id: 4b6112cc6c198d8b6df38b3e0a9a1aa19f16b383