components/dom_distiller/core/dom_distiller_switches.cc
@@ -14,6 +14,7 @@ const char kReaderModeFeedback[] = "reader-mode-feedback";
 
 namespace reader_mode_heuristics {
 const char kAdaBoost[] = "adaboost";
+const char kAllArticles[] = "allarticles";
 const char kOGArticle[] = "opengraph";
 const char kAlwaysTrue[] = "alwaystrue";
 const char kNone[] = "none";
