components/dom_distiller/core/dom_distiller_switches.h
@@ -28,6 +28,7 @@ extern const char kReaderModeFeedback[];
 
 namespace reader_mode_heuristics {
 extern const char kAdaBoost[];
+extern const char kAllArticles[];
 extern const char kOGArticle[];
 extern const char kAlwaysTrue[];
 extern const char kNone[];
